samples/_failures_safe/1761346392_45b9cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52daa1c4.c: In function ‘main’:
./samples/SAFE/__tmp_52daa1c4.c:145:5: error: expected declaration or statement at end of input
  145 |     }
      |     ^
